syntax = "proto3";

package heap_tracker;

message HeapOperation {
    enum Kind {
        Alloc = 0;
        Dealloc = 1;
    }

    Kind kind = 1;
    int64 micros_since_server_start = 2;
    int64 address = 3;
    optional int64 size = 4;
    uint64 thread_id = 5;
    string backtrace = 6;
}

message Marker {
    int64 first_operation_seq_no = 1;
    string name = 2;
}

message Update {
    repeated HeapOperation heap_operations = 1;
    repeated Marker markers = 2;
    bool end_of_file = 3;
}